--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-focus-scope": "^1.1.0",
     "feather-icons-react": "^0.7.0",
     "next": "14.2.3",
     "react": "^18",
