ok some tailwind makes sense, most does not

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-pg-migrate": "^7.7.1",
     "pg": "^8.13.1",
     "postcss-loader": "^8.1.1",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
