--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-focus-scope": "^1.1.0",
     "@vercel/postgres": "^0.10.0",
+    "animejs": "^3.2.2",
     "dotenv": "^16.4.5",
     "feather-icons-react": "^0.7.0",
     "mysql": "^2.18.1",
