--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@headlessui/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-focus-scope": "^1.1.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "@vercel/postgres": "^0.10.0",
     "animejs": "^3.2.2",
     "dotenv": "^16.4.5",
