--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-focus-scope": "^1.1.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
     "@vercel/postgres": "^0.10.0",
@@ -22,7 +23,7 @@
     "feather-icons-react": "^0.7.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
-    "next": "14.2.3",
+    "next": "^14.2.24",
     "next-auth": "^4.24.11",
     "node-pg-migrate": "^7.7.1",
     "pg": "^8.13.1",
